add annotation & bug fix & service optimization