@@ -29,6 +29,7 @@ import java.util.UUID;
 @Slf4j
 @Service
 @RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class FileService {
 
     private final AmazonS3 amazonS3;
@@ -130,7 +131,7 @@ public class FileService {
             byte[] bytes = IOUtils.toByteArray(objectInputStream);
 
             String fileOriginalName = file.get().getOriginalFileName();
-            String fileNameFix = URLEncoder.encode(fileOriginalName, StandardCharsets.UTF_8).replaceAll("\\+", "%20");
+            String fileNameFix = URLEncoder.encode(fileOriginalName, StandardCharsets.UTF_8.name()).replaceAll("\\+", "%20");
             HttpHeaders httpHeaders = new HttpHeaders();
             httpHeaders.setContentType(MediaType.APPLICATION_OCTET_STREAM);
             httpHeaders.setContentLength(bytes.length);
